--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="description" content="hambreados">
     <title>Hambreados.com</title>
     <link rel="stylesheet" href="styles.css">
-
+    <meta name="google-site-verification" content="GRADWe2Aq2ohF-5P30UtIBY-gp9KEXOJpYyZqKjojLo" />
     <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
 <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 <link rel="shortcut icon" href="/favicon.ico" />
